--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -108,3 +108,9 @@ a.page-link {color: #26a69a !important; }
   background-color:#26a69a  !important;
   color:#ffffff  !important;
 }
+
+.multiselect {
+  line-height: 1.0;
+  z-index: 999 !important;
+  width: 100%
+}
