--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -17,7 +17,8 @@ body {
   -webkit-overflow-scrolling: touch;
   position: relative;
   margin: 0;
-  padding-bottom: 15rem;
+  /*padding-bottom: 15rem;*/
+  padding-bottom: 100px;
   min-height: 100%;
 }
 
