--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,7 +8,7 @@ body {
   min-height: 100%;
   display: table;
 }
-
+html{overflow-x: hidden;}
 body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
   overflow-x:hidden;
