--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -77,7 +77,7 @@ img {
   }
 
   #app {
-    font-size: 0.75rem !important;
+    /*font-size: 0.75rem !important;*/
     overflow-x: hidden !important;
   }
 
