--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -65,7 +65,6 @@ img {
   width: auto\9; /* ie8 */
 }
 
-/*search navigation tab*/
 @media screen and (min-width : 0px) and (max-width : 439px) {
 
   .navbar-nav {
@@ -100,6 +99,9 @@ img {
     padding: 0.4rem
   }
 
+}
+
+@media screen and (min-width : 0px) and (max-width : 767px) {
   /* Force table to not be like tables anymore */
   #basic-info table,
   #basic-info thead,
@@ -134,8 +136,8 @@ img {
     border-top:none !important;
     /*border-bottom: 1px solid #dee2e6 !important;*/
   }
-
 }
+
 @media screen and (min-width : 0px) and (max-width : 363px) {
   .navbar-brand {
     font-size: 11px;
