--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic');
+/*@import url('https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic');*/
+@import url('fonts.css');
 html,
 body {
   height: 100%;
